--- a/src/views/pages/post.ejs
+++ b/src/views/pages/post.ejs
@@ -35,7 +35,7 @@
                   <% if(etlData.edge_media_preview_like.count) { %><%=etlData.edge_media_preview_like.count+' '%> <% } %>
                 <%}else if(etlData.edge_liked_by){ %><%=etlData.edge_liked_by.count+' '%>  <%}%>
               </span>
-          <span style="color: transparent;  text-shadow: 0 0 0 rgb(42, 170, 82);" class="fa fa-comment">
+          <span style="color:#749f83;" class="fa fa-comment">
             <%if(etlData.edge_media_to_comment){%>
             <%=etlData.edge_media_to_comment.count+' '%>
             <%} %>
