-Fixed profile page sparklines to be loaded on backNav function calls (rendering back to previous content before link browsing)

--- a/src/views/pages/profile.ejs
+++ b/src/views/pages/profile.ejs
@@ -14,22 +14,20 @@
 
     <h4><%= !(typeof etlData == 'undefined') ? etlData.username : "username" %></h4>
     <h6><%= !(typeof etlData == 'undefined') ? (etlData.email || etlData.full_name) : "user@maildomain" %></h6>
-
     <!-- <form method="POST" action="/profile">
        <input type="hidden" name="_method" value="DELETE">
        <button type="button" class="btn btn-danger">Delete Account</button>
      </form>-->
   </div>
-
   <div class="col-sm-6 profile-trends" style="">
-    <div id="sparkline-sentiments" style="width:51%;float:right"></div>
-    <span class="badge badge-secondary trend-badge" title="Sentiments"><span class="fa fa-smile-o" style="color:#61a0a8;font-size:14px;"></span></span>
-    <div id="sparkline" style="width:51%;float:right"></div>
-    <span class="badge badge-secondary trend-badge" title="Engagement"><span class="fa fa-handshake-o" style="color:#ffaa80"></span></span>
-    <div id="sparkline-likes" style="width:51%;float:right;"></div>
-    <span class="badge badge-secondary trend-badge" title="Likes"><span class="fa fa-heart-o" style="color:#c23531"></span></span>
-    <div id="sparkline-comments" style="width:51%;float:right;"></div>
-    <span class="badge badge-secondary trend-badge" title="Comments"><span class="fa fa-comments-o" style="color:#749f83;font-size:14px;"></span></span>
+    <span class="trend-badge" title="Sentiments"><span class="fa fa-smile-o" style="color:#61a0a8;text-align:right;font-size:1em;display:inline-block"></span></span>
+    <div id="sparkline-sentiments" style="width:51%;display:inline-block;text-align:right"></div><br>
+    <span class="trend-badge" title="Engagement"><span class="fa fa-handshake-o" style="text-align:right;color:#ffaa80;font-size:1em;display:inline-block"></span></span>
+    <div id="sparkline" style="width:51%;display:inline-block;text-align:right"></div><br>
+    <span class="trend-badge" title="Likes"><span class="fa fa-heart-o" style="text-align:right;color:#c23531;font-size:1em;display:inline-block"></span></span>
+    <div id="sparkline-likes" style="width:51%;display:inline-block;text-align:right"></div><br>
+    <span class="trend-badge" title="Comments"><span class="fa fa-comments-o" style="color:#749f83;text-align:right;font-size:1em;display:inline-block"></span></span>
+    <div id="sparkline-comments" style="width:51%;display:inline-block;text-align:right"></div>
   </div>
   <div class="col-sm-6 profile-boolean">
     <div style="min-width: 100%; display: inline-block;font-size: 1em;" class="col-sm-6">
@@ -87,6 +85,7 @@
       <% } %>
     </div>
   </div>
+
   <div style="display:inline-block" class="col-sm-6 text-center align-self-center profile-counters">
     <div style="background-color:#2f4554" class="byline-counter">
       <% if(etlData.edge_owner_to_timeline_media) { %>
