--- a/public/css/style.css
+++ b/public/css/style.css
@@ -584,22 +584,26 @@ img {
 }
 .profile-trends{
   display: inline-block;
+  text-align: right;
 }
 .trend-badge{
   display: inline-block;
-  width: 63%;
-  margin-right: -28px;
-  text-align: center;
-  float: right;
-  margin-bottom: 10px;
+  width: 10%;
+  /*margin: 10px;*/
+  /* padding-left: 25px; */
+  /* padding-right: 25px; */
+  vertical-align: middle;
+  /* padding: 5px; */
+  text-align: left;
+  /* float: right; */
+  /* margin-bottom: 10px; */
   background-color: #fff;
 }
 .profile-boolean{
-  position: absolute;
   display: inline-block;
   padding-left: 10px;
   font-family: Karla, sans-serif;
-  top: 180px;
+  top: -20px;
 }
 .profile-boolean-indicator{
   display: block;
@@ -690,6 +694,9 @@ img {
   outline: 0;
   outline: none;
 }
+.row {
+  position: relative;
+  padding:15px;}
 /*@media only screen and (min-width: 1024px) {
   .hero{
     margin-top:5%
