--- a/src/views/pages/profile.ejs
+++ b/src/views/pages/profile.ejs
@@ -21,11 +21,11 @@
   </div>
   <div class="col-sm-6 profile-trends" style="">
     <span class="trend-badge" title="Sentiments"><span class="fa fa-smile-o" style="color:#61a0a8;text-align:right;font-size:1em;display:inline-block"></span></span>
-    <div id="sparkline-sentiments" style="width:51%;display:inline-block;text-align:right"></div><br>
+    <div id="sparkline-sentiments" style="width:51%;display:inline-block;text-align:right"></div><br><br>
     <span class="trend-badge" title="Engagement"><span class="fa fa-handshake-o" style="text-align:right;color:#ffaa80;font-size:1em;display:inline-block"></span></span>
-    <div id="sparkline" style="width:51%;display:inline-block;text-align:right"></div><br>
+    <div id="sparkline" style="width:51%;display:inline-block;text-align:right"></div><br><br>
     <span class="trend-badge" title="Likes"><span class="fa fa-heart-o" style="text-align:right;color:#c23531;font-size:1em;display:inline-block"></span></span>
-    <div id="sparkline-likes" style="width:51%;display:inline-block;text-align:right"></div><br>
+    <div id="sparkline-likes" style="width:51%;display:inline-block;text-align:right"></div><br><br>
     <span class="trend-badge" title="Comments"><span class="fa fa-comments-o" style="color:#749f83;text-align:right;font-size:1em;display:inline-block"></span></span>
     <div id="sparkline-comments" style="width:51%;display:inline-block;text-align:right"></div>
   </div>
