- Fixed minor style issues.

--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -79,7 +79,7 @@
             <a class="nav-link" data-toggle="tab" href="#search-tab">Search</a>
           </li>
           <li class="nav-item">
-            <input  style="max-width:95%; display:inline" placeholder="Count limit"  type="number" class="form-control" id="count-input" count=0>
+            <input  style="width:61%; display:inline" placeholder="Count limit"  type="number" class="form-control" id="count-input" count=0>
           </li>
 
         </ul>
